<resources>
    <string name="app_name">MQTT.Cli</string>



    <string name="profile_name_cannot_be_null">Profile name cannot be null</string>
    <string name="broker_address_cannot_be_null">Broker address cannot be null</string>
    <string name="broker_port_cannot_be_null">Broker port cannot be null</string>
    <string name="client_id_cannot_be_null">Client ID cannot be null</string>
    <string name="connection_timeout_cannot_be_null">Connection timeout cannot be null</string>
    <string name="keep_alive_interval_cannot_be_null">Keep alive interval cannot be null</string>
    <string name="lwt_topic_cannot_be_null">LWT topic cannot be null</string>
    <string name="lwt_message_cannot_be_null">LWT message cannot be null</string>
    <string name="ca_file_cannot_be_null">CA File cannot be null</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="txt_retained">Retained</string>
    <string name="txt_qos_0">QoS 0</string>
    <string name="txt_qos_1">QoS 1</string>
    <string name="txt_qos_2">QoS 2</string>
    <string name="txt_publish">Publish</string>
    <string name="txt_please_input_topic">Please input topic</string>
    <string name="txt_subscribe">Subscribe</string>
    <string name="html_close_pop"><u>close</u></string>

    <string-array name="qos_arr">
        <item>QoS 0</item>
        <item>QoS 1</item>
        <item>QoS 2</item>
    </string-array>

</resources>